provisioning/infrastructure/100_services/base/keycloak-instance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak

spec:
  ingressClassName: traefik
  rules:
  - host: << example.com >>
    http:
      paths:
      - backend:
          service:
            name: keycloak-service
            port:
              number: 8080
        pathType: ImplementationSpecific

  tls:
  - hosts:
    - << example.com >>
    secretName: << example.com >>
